Adding Image to Blog Page

--- a/HTML/Basics/Index.html
+++ b/HTML/Basics/Index.html
@@ -9,23 +9,37 @@
 <body>
 
 	<!-- Header -->
+
 		<!-- Logo -->
+		<img src= "static/Logo Image.png" alt= "Logo Image" height="30%" width="20%">
+
 	 	<!-- websites link -->
-	 	<!-- Headerimage -->
 
 	<!-- Main -->
 		<!-- Blog Heading -->
-		<h1> Five Tips for Front-End Web Development 
+		<h1> 
+			Five Tips for Front-End Web Development 
 		</h1>
+
 		<!-- Blog image -->
+
+		<!-- Absolute Path -->
+			<!-- <img src= "E:/Full Stack Devolopment/HTML/Basics/Five-tips-for-front-end-web-development.jpg"> -->
+
+		<!-- Relative Path [Recommended Practice] -->
+		<img src= "static/Blog Image.jpg" alt= "Blogs Image"
+		height="50%" weight="50%">
+
 		<!-- Content -->
 			<!-- Paragraph1 -->
-			<p>	Don’t you just love exploring beautiful and neat sites with a clean user interface? While most of us would reply with an assertive ‘YES,’ little, do we know the kind of effort and skill that goes into making a website attractive and user-friendly. The secret to creating an impressive site is to master the art of front-end development, and no, it is not as easy as it seems! 
+			<p>	
+				Don’t you just love exploring beautiful and neat sites with a clean user interface? While most of us would reply with an assertive ‘YES,’ little, do we know the kind of effort and skill that goes into making a website attractive and user-friendly. The secret to creating an impressive site is to master the art of front-end development, and no, it is not as easy as it seems! 
 			</p>
 
 			<!-- <br> -->
 
-			<p> However, it is not impossible either.  Here are five tips that’ll help you get better in front-end design and web development. 
+			<p> 
+				However, it is not impossible either.  Here are five tips that’ll help you get better in front-end design and web development. 
 			</p>
 
 			<!-- Paragraph List -->
