Adding Anchor Tags 1

--- a/HTML/Basics/Index.html
+++ b/HTML/Basics/Index.html
@@ -11,9 +11,12 @@
 	<!-- Header -->
 
 		<!-- Logo -->
-		<img src= "static/Logo Image.png" alt= "Logo Image" height="30%" width="20%">
-
+		<a href = "https://www.codingninjas.com" target =_blank> 
+			<img src= "static/Logo Image.png" alt= "Logo Image" height="30%" width="20%">
+		</a>
 	 	<!-- websites link -->
+	 	<a href = "https://www.codingninjas.com/blog/" target =_blank>
+	 	<h4>Coding Ninjas Blog</h4></a>
 
 	<!-- Main -->
 		<!-- Blog Heading -->
@@ -83,12 +86,30 @@
 					A front-end developer has to keep himself/herself updated continuously with the latest news and innovations in the field. You need to take a proactive stand and learn new things about front-end development from informative blogs and videos. 
 
 					<ul type="disc">
-						<li>CSS Weekly</li>
-						<li>HTML5 Weekly</li>
-						<li>JavaScript Weekly</li>
-						<li>Web Design Weekly</li>
-						<li>Codrops and </li>
-						<li>ShopTalk Podcast</li>
+						<li>
+							<a href = "https://css-weekly.com/" target =_blank>CSS Weekly</a>
+						</li>
+
+						<li>
+							<a href = "https://www.designernews.co/stories/50169-html5-weekly---newsletter" target =_blank>HTML5 Weekly</a>
+						</li>
+
+						<li>
+							<a href = "https://javascriptweekly.com/" target =_blank>JavaScript Weekly</a>
+						</li>
+
+						<li>
+							<a href = "https://web-design-weekly.com/" target =_blank>Web Design Weekly</a>
+						</li>
+
+						<li>
+							<a href = "https://tympanus.net/codrops/" target =_blank>Codrops and</a> 
+						</li>
+
+						<li>
+							<a href = "https://shoptalkshow.com/ " target =_blank>ShopTalk Podcast</a>
+						</li>
+
 					</ul>
 
 					are some of the most informative and useful learning sources for front-end developers. 
