Adding Anchor Tags 2

--- a/HTML/Basics/Index.html
+++ b/HTML/Basics/Index.html
@@ -117,6 +117,18 @@
 					While these tips will surely help you become a better front-end designer, in the long run, you must always remember two things while designing your platform – keep it simple and neat, and don’t forget to create your signature style. And for all you peeps interested in making it big in front-end development, Coding Ninjas has the perfect course for you! To know more, drop by at our website
 				</p>
 
+				<h3><li>Related Blogs.</li></h3>
+
+					<ul type="disc">
+						<li>
+							<a href = "General/Best Coding Practices.html" target =_blank>Best Coding Practices</a> 
+						</li>
+
+						<li>
+							<a href = "Web/Five Tips.html" target =_blank>Five Tips</a> 
+						</li>
+					</ul>
+
 			</ol>
 			<!-- Ending Paragraph --> 
 
