Adding Semantic Tags

--- a/HTML/Basics/Index.html
+++ b/HTML/Basics/Index.html
@@ -9,7 +9,7 @@
 <body>
 
 	<!-- Header -->
-
+	<nav>
 		<!-- Logo -->
 		<a href = "https://www.codingninjas.com" target =_blank> 
 			<img src= "static/Logo Image.png" alt= "Logo Image" height="30%" width="20%">
@@ -17,8 +17,10 @@
 	 	<!-- websites link -->
 	 	<a href = "https://www.codingninjas.com/blog/" target =_blank>
 	 	<h4>Coding Ninjas Blog</h4></a>
+	</nav>
 
-	<!-- Main -->
+	
+	<header>
 		<!-- Blog Heading -->
 		<h1> 
 			Five Tips for Front-End Web Development 
@@ -32,8 +34,10 @@
 		<!-- Relative Path [Recommended Practice] -->
 		<img src= "static/Blog Image.jpg" alt= "Blogs Image"
 		height="50%" weight="50%">
-
+	</header>
+	
 		<!-- Content -->
+		<main>
 			<!-- Paragraph1 -->
 			<p>	
 				Don’t you just love exploring beautiful and neat sites with a clean user interface? While most of us would reply with an assertive ‘YES,’ little, do we know the kind of effort and skill that goes into making a website attractive and user-friendly. The secret to creating an impressive site is to master the art of front-end development, and no, it is not as easy as it seems! 
@@ -131,6 +135,8 @@
 
 			</ol>
 			<!-- Ending Paragraph --> 
+		</main>
+	
 
 </body>
 </html>
