Adding Internal Links

--- a/HTML/Basics/Index.html
+++ b/HTML/Basics/Index.html
@@ -8,7 +8,6 @@
 </head>
 <body>
 
-	<!-- Header -->
 	<nav>
 		<!-- Logo -->
 		<a href = "https://www.codingninjas.com" target =_blank> 
@@ -16,7 +15,9 @@
 		</a>
 	 	<!-- websites link -->
 	 	<a href = "https://www.codingninjas.com/blog/" target =_blank>
-	 	<h4>Coding Ninjas Blog</h4></a>
+	 	<h3>Coding Ninjas Blog</h3></a>
+	 	<a href = "#comments-section"> <h3> Go to Comments</h3></a>
+
 	</nav>
 
 	
@@ -35,7 +36,7 @@
 		<img src= "static/Blog Image.jpg" alt= "Blogs Image"
 		height="50%" weight="50%">
 	</header>
-	
+
 		<!-- Content -->
 		<main>
 			<!-- Paragraph1 -->
@@ -134,7 +135,26 @@
 					</ul>
 
 			</ol>
-			<!-- Ending Paragraph --> 
+			<!-- Ending Paragraph -->
+
+			<section id = "comments-section">
+				<h2>Comments</h2>
+
+				<div>
+					<h4>Name</h4>
+					<p>Comment</p>
+				</div>
+				<div>
+					<h4>Name</h4>
+					<p>Comment</p>
+				</div>
+				<div>
+					<h4>Name</h4>
+					<p>Comment</p>
+				</div>
+			</section>
+			<a href= "#"> <h4>Back To Top<h4/></a>
+
 		</main>
 	
 
