--- a/HTML/Basics/Index.html
+++ b/HTML/Basics/Index.html
@@ -3,76 +3,91 @@
 <head>
 	<meta charset="utf-8">
 	<!-- Title -->
-	<title> Five Tips for Front-End Web Development 
-	</title>
+	<title> Five Tips for Front-End Web Development </title>
 </head>
 <body>
 
-	<nav>
+
+	<header id="Main-header">
+
 		<!-- Logo -->
 		<a href = "https://www.codingninjas.com" target =_blank> 
-			<img src= "static/Logo Image.png" alt= "Logo Image" height="30%" width="20%">
+			<img src= "static/Logo Image.png" alt= "Coding Ninjas Logo">
 		</a>
+
 	 	<!-- websites link -->
-	 	<a href = "https://www.codingninjas.com/blog/" target =_blank>
-	 	<h3>Coding Ninjas Blog</h3></a>
-	 	<a href = "#comments-section"> <h3> Go to Comments</h3></a>
+	 	<div>
+	 		<a href = "https://www.codingninjas.com/blog/" target =_blank>
+	 		<h3>Coding Ninjas Blog</h3></a>
+	 		<a href = "#comments-section"> <h3> Go to Comments</h3></a>
+	 	</div>
 
-	</nav>
+	 	<div>
+            <img src="static/Header Image.png">
+        </div>
 
-	
-	<header>
-		<!-- Blog Heading -->
-		<h1> 
-			Five Tips for Front-End Web Development 
-		</h1>
-
-		<!-- Blog image -->
-
-		<!-- Absolute Path -->
-			<!-- <img src= "E:/Full Stack Devolopment/HTML/Basics/Five-tips-for-front-end-web-development.jpg"> -->
-
-		<!-- Relative Path [Recommended Practice] -->
-		<img src= "static/Blog Image.jpg" alt= "Blogs Image"
-		height="50%" weight="50%">
 	</header>
 
-		<!-- Content -->
+
+	<div>
+
 		<main>
+
+			<header>
+				<!-- Blog Heading -->
+				<h1 id="Blog Title"> Five Tips for Front-End Web Development </h1>
+			</header>
+
+
+			<article>
+
+				<!-- Blog image -->
+
+				<!-- Absolute Path -->
+					<!-- <img src= "E:/Full Stack Devolopment/HTML/Basics/Five-tips-for-front-end-web-development.jpg"> -->
+
+				<!-- Relative Path [Recommended Practice] -->
+				<div>
+					<img src= "static/Blog Image.jpg" alt= "Blogs Image"
+					height="50%" weight="50%">
+				</div>
+
+			<!-- Content -->
+		
 			<!-- Paragraph1 -->
-			<p>	
-				Don’t you just love exploring beautiful and neat sites with a clean user interface? While most of us would reply with an assertive ‘YES,’ little, do we know the kind of effort and skill that goes into making a website attractive and user-friendly. The secret to creating an impressive site is to master the art of front-end development, and no, it is not as easy as it seems! 
-			</p>
+				<p>	
+					Don’t you just love exploring beautiful and neat sites with a clean user interface? While most of us would reply with an assertive ‘YES,’ little, do we know the kind of effort and skill that goes into making a website attractive and user-friendly. The secret to creating an impressive site is to master the art of front-end development, and no, it is not as easy as it seems! 
+				</p>
 
 			<!-- <br> -->
 
-			<p> 
-				However, it is not impossible either.  Here are five tips that’ll help you get better in front-end design and web development. 
-			</p>
+				<p> 
+					However, it is not impossible either.  Here are five tips that’ll help you get better in front-end design and web development. 
+				</p>
 
 			<!-- Paragraph List -->
-			<ol>
-				<h3><li>Automate!</li></h3>
-				<p>
-					As a front-end developer, you already have to take care of minute little details that can get overwhelming at times. You have to invest your time on things like Boilerplate, testing, workflow, dependency management, performance, optimization, build, deployment, and so on. Doesn’t sound easy, right?
-				</p>
-				<p>
-					Take some steam off yourself and incorporate automation into your workflow. While automation can take care of things such as optimization, testing, etc., you can focus on the core areas of front-end development such as HTML, CSS, creating the client-side software, enhancing the user-experience, and so on. By doing so, not only will your productivity increase, but you will also learn to use your time to focus on the areas that’ll improve the overall functionality of your site.  Grunt, Gulp, and Broccoli are some very efficient automation tools.
-				</p>
+				<ol>
+					<h3><li>Automate!</li></h3>
+					<p>
+						As a front-end developer, you already have to take care of minute little details that can get overwhelming at times. You have to invest your time on things like Boilerplate, testing, workflow, dependency management, performance, optimization, build, deployment, and so on. Doesn’t sound easy, right?
+					</p>
+					<p>
+						Take some steam off yourself and incorporate automation into your workflow. While automation can take care of things such as optimization, testing, etc., you can focus on the core areas of front-end development such as HTML, CSS, creating the client-side software, enhancing the user-experience, and so on. By doing so, not only will your productivity increase, but you will also learn to use your time to focus on the areas that’ll improve the overall functionality of your site.  Grunt, Gulp, and Broccoli are some very efficient automation tools.
+					</p>
 
-				<h3><li>Refactor Your Code From Time To Time.</li></h3>
-				<p>
-					By “refactoring” your code, you’re only enhancing the code without tampering with its functionality. This will improve the quality and readability quotient of your code and the more often you do it, your code will continually be updated into a cleaner and fresher version of what it was before. Apart from that, one of the most significant advantages that refactoring offers is that it ensures your code remains free from plagiarism.
-				</p>
+					<h3><li>Refactor Your Code From Time To Time.</li></h3>
+					<p>
+						By “refactoring” your code, you’re only enhancing the code without tampering with its functionality. This will improve the quality and readability quotient of your code and the more often you do it, your code will continually be updated into a cleaner and fresher version of what it was before. Apart from that, one of the most significant advantages that refactoring offers is that it ensures your code remains free from plagiarism.
+					</p>
 
-				<h3><li>Learning Command Line Is The Way To Go.</li></h3>
-				<p>
-					It is a standard convention among developers to use GUI tools to power the terminal. What most of them don’t realize is that by doing so, they end up spending a significant portion of their valuable time in handling GUI tools than making progress on the terminal. The right way to go about it is learning the command line. Start with the basics of the command line and advance to higher levels as you go, and you’ll find that you can complete several tasks with much more ease and efficiency with command line tools than with GUI tools. Moreover, automating the terminal with appropriate commands is a great way to save time and energy.
-				</p>
+					<h3><li>Learning Command Line Is The Way To Go.</li></h3>
+					<p>
+						It is a standard convention among developers to use GUI tools to power the terminal. What most of them don’t realize is that by doing so, they end up spending a significant portion of their valuable time in handling GUI tools than making progress on the terminal. The right way to go about it is learning the command line. Start with the basics of the command line and advance to higher levels as you go, and you’ll find that you can complete several tasks with much more ease and efficiency with command line tools than with GUI tools. Moreover, automating the terminal with appropriate commands is a great way to save time and energy.
+					</p>
 
-				<h3><li>Invest In Productive Tools.</li></h3>
-				<p>
-					The Internet is teeming with a host of web development tools, from browser add-ons to smart plugins, the amount of choices available now is massive! So, why not invest in some really productive web tools that’ll help you improve your front-end designing skills? Tools like 
+					<h3><li>Invest In Productive Tools.</li></h3>
+					<p>
+						The Internet is teeming with a host of web development tools, from browser add-ons to smart plugins, the amount of choices available now is massive! So, why not invest in some really productive web tools that’ll help you improve your front-end designing skills? Tools like 
 
 					<ul type="disc">
 						<li>Sublime Text</li>
@@ -84,11 +99,11 @@
 					</ul>
 
 					are nothing short of a godsend for web developers.
-				</p>
+					</p>
 
-				<h3><li>Always Be Curious.</li></h3>
-				<p>
-					A front-end developer has to keep himself/herself updated continuously with the latest news and innovations in the field. You need to take a proactive stand and learn new things about front-end development from informative blogs and videos. 
+					<h3><li>Always Be Curious.</li></h3>
+					<p>
+						A front-end developer has to keep himself/herself updated continuously with the latest news and innovations in the field. You need to take a proactive stand and learn new things about front-end development from informative blogs and videos. 
 
 					<ul type="disc">
 						<li>
@@ -117,45 +132,47 @@
 
 					</ul>
 
-					are some of the most informative and useful learning sources for front-end developers. 
-					Also, make it a point to attend conferences and webinars. These meet-ups provide excellent opportunities to expand your network and get acquainted with talented people.
-					While these tips will surely help you become a better front-end designer, in the long run, you must always remember two things while designing your platform – keep it simple and neat, and don’t forget to create your signature style. And for all you peeps interested in making it big in front-end development, Coding Ninjas has the perfect course for you! To know more, drop by at our website
-				</p>
+						are some of the most informative and useful learning sources for front-end developers. 
+						Also, make it a point to attend conferences and webinars. These meet-ups provide excellent opportunities to expand your network and get acquainted with talented people.
+						While these tips will surely help you become a better front-end designer, in the long run, you must always remember two things while designing your platform – keep it simple and neat, and don’t forget to create your signature style. And for all you peeps interested in making it big in front-end development, Coding Ninjas has the perfect course for you! To know more, drop by at our website
+					</p>
 
-				<h3><li>Related Blogs.</li></h3>
+					<h3><li>Related Blogs.</li></h3>
 
-					<ul type="disc">
-						<li>
-							<a href = "General/Best Coding Practices.html" target =_blank>Best Coding Practices</a> 
-						</li>
+						<ul type="disc">
+							<li>
+								<a href = "General/Best Coding Practices.html" target =_blank>Best Coding Practices</a> 
+							</li>
 
-						<li>
-							<a href = "Web/Five Tips.html" target =_blank>Five Tips</a> 
-						</li>
-					</ul>
+							<li>
+								<a href = "Web/Five Tips.html" target =_blank>Five Tips</a> 
+							</li>
+						</ul>
 
-			</ol>
-			<!-- Ending Paragraph -->
+				</ol>
+				<!-- Ending Paragraph -->
 
-			<section id = "comments-section">
-				<h2>Comments</h2>
+				<section id = "comments-section">
+					<h2>Comments</h2>
 
-				<div>
-					<h4>Name</h4>
-					<p>Comment</p>
-				</div>
-				<div>
-					<h4>Name</h4>
-					<p>Comment</p>
-				</div>
-				<div>
-					<h4>Name</h4>
-					<p>Comment</p>
-				</div>
-			</section>
-			<a href= "#"> <h4>Back To Top<h4/></a>
+					<div>
+						<h4>Name</h4>
+						<p>Comment</p>
+					</div>
+					<div>
+						<h4>Name</h4>
+						<p>Comment</p>
+					</div>
+					<div>
+						<h4>Name</h4>
+						<p>Comment</p>
+					</div>
+				</section>
+					<a href= "#"> <h4>Back To Top<h4/></a>
 
+			</article>
 		</main>
+	</div>
 	
 
 </body>
